--- a/src/main/resources/templates/home/home-guest.html
+++ b/src/main/resources/templates/home/home-guest.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.cdnfonts.com/css/now" rel="stylesheet">
     <link rel="stylesheet" type="text/css" th:href="@{/css/home-guest-style.css}">
     <link rel="stylesheet" th:href="@{/css/login-popup-style.css}">
-
 </head>
 
 <body class="home-guest-page">
@@ -24,15 +23,14 @@
             <a class="menu__item" th:href="@{/home}">Strona główna</a>
             <a class="menu__item" th:href="@{/wyszukiwarka}">Wyszukaj przepis</a>
             <a class="menu__item profile" th:href="@{/register}">Zarejestruj się</a>
-            <!-- th:href="@{/login}" -->
-            <a class="menu__item profile menu__login">Zaloguj się</a>
+            <a class="menu__item profile menu__login " th:href="@{/login}">Zaloguj się</a>
         </div>
         <div class="menu__desktop">
             <a class="menu__item profile" th:href="@{/register}">Zarejestruj się</a>
             <a class="menu__item profile" th:href="@{/login}">Zaloguj się</a>
         </div>
     </nav>
-    <div class="login-form__wrapper">
+    <!-- <div class="login-form__wrapper">
         <div th:if="${param.planAth}">
             <div>Musisz sie zalogować aby wygenerować plan.</div>
         </div>
@@ -67,7 +65,7 @@
             </div>
         </form>
     </div>
-    <div class="login-form__background"></div>
+    <div class="login-form__background"></div> -->
     <main>
         <section class="plan-generator">
             <div class="graphic">
