Wyświetlanie przepisu z planu po id

--- a/src/main/resources/templates/details/user-details.html
+++ b/src/main/resources/templates/details/user-details.html
@@ -39,7 +39,8 @@
 
 <!-- Inne pola użytkownika, jeśli są -->
 
-<a th:href="@{/plan/groceryList}">Zobacz twój plan posiłków</a>
+<a th:href="@{/plan/recipes}">Zobacz swój plan posiłków</a>
+<a th:href="@{/plan/grocery-list}">Zobacz swoją listę zakupów</a>
 
 </body>
 </html>
