--- a/src/main/resources/templates/plangenerator/grocery-list.html
+++ b/src/main/resources/templates/plangenerator/grocery-list.html
@@ -22,25 +22,13 @@
 <div>
 
     <p>Lista zakupów:</p>
-
-<!--    <table>-->
-<!--        <tr>-->
-<!--            <td>Potrzebujesz</td> <td>Kup</td>-->
-<!--        </tr>-->
-<!--        <tr th:each="product : ${groceryList}">-->
-<!--            <td th:text="${product.amountToUse()}"></td>-->
-<!--            <td th:text="${product.nrOfPackets()} + ' x ' + ${product.packingMeasure()} + ' ' + ${product.unit()} + ' - ' + ${product.name()}">4</td>-->
-<!--        </tr>-->
-<!--    </table>-->
-
     <div th:each="product : ${groceryList}">
         <ul>
-<!--            <li th:text="${product.nrOfPackets()} + ' x ' + ${product.packingMeasure()} + ' ' + ${product.unit()} + ' - ' + ${product.name()}"></li>-->
             <li th:text="${product.amountToUse()} + ' ' + ${product.unit()} + ' - ' + ${product.name()}"></li>
         </ul>
     </div>
 
-    <a th:href="@{/plan/saved-plan}">Wróć do planu</a>
+    <a th:href="@{/plan/recipes}">Pokaż plan</a>
 </div>
 </body>
 </html>
