--- a/src/main/resources/templates/plangenerator/planner.html
+++ b/src/main/resources/templates/plangenerator/planner.html
@@ -21,25 +21,20 @@
 <br /><br />
 <div>
     <div th:each="element : ${mealPlanner}">
-        <div th:if="${element.recipeDisplay().id().equals('EMPTY_DAY_ID')}">
+        <div th:if="${element.firstDisplayRecipe().id().equals('EMPTY_DAY_ID')}">
             <p th:text="${element.dayOfWeek()} + ': ' + ${element.date()}"></p>
             <p>Masz wolne :)</p>
         </div>
-        <div th:if="${!element.recipeDisplay().id().equals('EMPTY_DAY_ID')}">
+        <div th:if="${!element.firstDisplayRecipe().id().equals('EMPTY_DAY_ID')}">
             <p th:text="${element.dayOfWeek()} + ': ' + ${element.date()}"></p>
-            <p th:text="${element.recipeDisplay().name()}"></p>
-            <p>Składniki:</p>
-            <ul>
-                <li th:each="ing : ${element.recipeDisplay().ingredients()}"
-                    th:text="${ing.name()} + ' - ' + ${ing.amountDisplay()} + ' ' + ${ing.unitDisplay()}"
-                ></li>
-            </ul>
+            <a th:href="@{/plan/recipes/{id}(id=${element.firstDisplayRecipe().id()})}" th:text="${element.firstDisplayRecipe().name()}"></a>
+            <p th:text="'Czas przygotowania: ' + ${element.firstDisplayRecipe().prepareTime()}"></p>
         </div>
         <br><br>
     </div>
 
     <a th:href="@{/plan/generator}">Wygeneruj plan ponownie</a>
-    <a th:href="@{/plan/groceryList}">Lista zakupów</a>
+    <a th:href="@{/plan/grocery-list}">Lista zakupów</a>
 </div>
 </body>
 </html>
