poprawki po mergu

--- a/src/main/resources/static/css/searcher-style.css
+++ b/src/main/resources/static/css/searcher-style.css
@@ -111,25 +111,18 @@ h1 {
     gap: 10px;
 }
 .draw-btn__wrapper {
-    display: flex;
-    align-items: center;
-    gap: 10px;
     position: absolute;
     bottom: 50px;
     top: 230px;
     left: 50%;
     transform: translate(-50%, 0);
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 @media (min-width: 450px) {
     .draw-btn__wrapper{
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        position: absolute;
-        bottom: 50px;
         top: 220px;
-        left: 50%;
-        transform: translate(-50%, 0);
     }
 }
 .browser__form {
@@ -228,6 +221,12 @@ h1 {
 }
 .browser__recipes-container {
     margin-top: 250px;
+}
+
+.recipe-container__item {
+    width: 100%;
+    border: 2px solid var(--light-gray);
+    padding: 50px 40px;
 }
 @media (min-width: 450px) {
     .hero__image {
