--- a/src/main/resources/static/css/searcher-style.css
+++ b/src/main/resources/static/css/searcher-style.css
@@ -214,11 +214,7 @@ h1 {
     overflow: auto;
     min-height: 60px;
 }
-.recipe-container__item {
-    width: 100%;
-    height: 186px;
-    font-size: 16px;
-}
+
 .browser__recipes-container {
     margin-top: 250px;
 }
@@ -226,8 +222,33 @@ h1 {
 .recipe-container__item {
     width: 100%;
     border: 2px solid var(--light-gray);
-    padding: 50px 40px;
+    padding: 20px 40px;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    font-size: 16px;
 }
+
+.recipe-img__link {
+    width: 120px;
+    height: 150px;
+    box-shadow: 4px 4px 13.4px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 3px;
+}
+
+.recipe__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    /* position: absolute; */
+}
+
+.recipe-container__link {
+    width: 120px;
+    order: 2;
+}
+
 @media (min-width: 450px) {
     .hero__image {
         display: none;
