--- a/src/main/resources/templates/home/home-guest.html
+++ b/src/main/resources/templates/home/home-guest.html
@@ -20,7 +20,9 @@
         </button>
         <div class="menu">
             <a class="menu__item" th:href="@{/home}">Strona główna</a>
-            <a class="menu__item" th:href="@{/wyszukiwarka}">Wyszukaj przepis</a>
+<!--            !!!!!!!!!!!!!!!-->
+<!--            <a class="menu__item" th:href="@{/plan/guest}">Wygeneruj plan</a>-->
+            <a class="menu__item" th:href="@{/recipes}">Wyszukaj przepis</a>
             <a class="menu__item profile" th:href="@{/register}">Zarejestruj się</a>
             <a class="menu__item profile menu__login " th:href="@{/login}">Zaloguj się</a>
         </div>
