--- a/src/main/resources/templates/details/recipe-details.html
+++ b/src/main/resources/templates/details/recipe-details.html
@@ -14,26 +14,46 @@
 </head>
 
 <body>
-    <nav>
-        <button class="burger-btn">
-            <i class="fa-solid fa-burger"></i>
-        </button>
-        <button class="exit-btn">
-            <i class="fa-solid fa-xmark"></i>
-        </button>
-        <div class="menu">
-            <a class="menu__item" th:href="@{/home/user}">Strona główna</a>
-            <a class="menu__item" th:href="@{/plan/generator}">Wygeneruj plan</a>
-            <a class="menu__item" th:href="@{/wyszukiwarka}">Wyszukaj przepis</a>
-            <a class="menu__item" th:href="@{'/user/' + ${username}}">Twój profil</a>
-            <a class="menu__item" th:href="@{/logout}">Wyloguj się</a>
-        </div>
-        <div class="menu__desktop">
-            <a class="menu__item profile" th:href="@{/logout}">Wyloguj się</a>
-            <a title="Twój profil" class="menu__item profile profile-icon" th:href="@{'/user/' + ${username}}"><i
-                    class="fa-solid fa-user"></i></a>
-        </div>
-    </nav>
+<nav sec:authorize="isAuthenticated()">
+    <button class="burger-btn">
+        <i class="fa-solid fa-burger"></i>
+    </button>
+    <button class="exit-btn">
+        <i class="fa-solid fa-xmark"></i>
+    </button>
+    <div class="menu">
+        <a class="menu__item" th:href="@{/home/user}">Strona główna</a>
+        <a class="menu__item" th:href="@{/plan/generator}">Wygeneruj plan</a>
+        <a class="menu__item">Zarządzaj przepisami</a>
+        <a class="menu__item" th:href="@{/recipes}">Wyszukaj przepis</a>
+        <a class="menu__item" th:href="@{'/user/' + ${username}}">Twój profil</a>
+        <a class="menu__item" th:href="@{/logout}">Wyloguj się</a>
+    </div>
+    <div class="menu__desktop">
+        <a class="menu__item profile" th:href="@{/logout}">Wyloguj się</a>
+        <a title="Twój profil" class="menu__item profile profile-icon" th:href="@{'/user/' + ${username}}"><i
+                class="fa-solid fa-user"></i></a>
+    </div>
+</nav>
+<nav sec:authorize="!isAuthenticated()">
+    <button class="burger-btn">
+        <i class="fa-solid fa-burger"></i>
+    </button>
+    <button class="exit-btn">
+        <i class="fa-solid fa-xmark"></i>
+    </button>
+    <div class="menu">
+        <a class="menu__item" th:href="@{/home}">Strona główna</a>
+        <a class="menu__item" th:href="@{/plan/guest}">Wygeneruj plan</a>
+        <a class="menu__item" th:href="@{/recipes}">Wyszukaj przepis</a>
+        <a class="menu__item profile" th:href="@{/register}">Zarejestruj się</a>
+        <a class="menu__item profile menu__login " th:href="@{/login}">Zaloguj się</a>
+    </div>
+    <div class="menu__desktop">
+        <a class="menu__item profile" th:href="@{/register}">Zarejestruj się</a>
+        <a class="menu__item profile" th:href="@{/login}">Zaloguj się</a>
+    </div>
+</nav>
     <header class="recipe__header">
         <h1 th:text="${name}" class="recipe__title"></h1>
     </header>
