--- a/src/main/resources/templates/home/home-user.html
+++ b/src/main/resources/templates/home/home-user.html
@@ -19,9 +19,10 @@
             <i class="fa-solid fa-xmark"></i>
         </button>
         <div class="menu">
-            <a class="menu__item" style="text-decoration: none;" th:href="@{/home/user}">Strona główna</a>
+            <a class="menu__item" th:href="@{/home/user}">Strona główna</a>
             <a class="menu__item" th:href="@{/plan/generator}">Wygeneruj plan</a>
-            <a class="menu__item" th:href="@{/wyszukiwarka}">Wyszukaj przepis</a>
+            <a class="menu__item">Zarządzaj przepisami</a>
+            <a class="menu__item" th:href="@{/recipes}">Wyszukaj przepis</a>
             <a class="menu__item" th:href="@{'/user/' + ${username}}">Twój profil</a>
             <a class="menu__item" th:href="@{/logout}">Wyloguj się</a>
         </div>
