--- a/src/main/resources/templates/loginandregister/login-page.html
+++ b/src/main/resources/templates/loginandregister/login-page.html
@@ -11,24 +11,25 @@
 </head>
 
 <body class="login-page">
-    <nav>
-        <button class="burger-btn">
-            <i class="fa-solid fa-burger"></i>
-        </button>
-        <button class="exit-btn">
-            <i class="fa-solid fa-xmark"></i>
-        </button>
-        <div class="menu">
-            <a class="menu__item" th:href="@{/home}">Strona główna</a>
-            <a class="menu__item" th:href="@{/wyszukiwarka}">Wyszukaj przepis</a>
-            <a class="menu__item profile" th:href="@{/register}">Zarejestruj się</a>
-            <a class="menu__item profile menu__login " th:href="@{/login}">Zaloguj się</a>
-        </div>
-        <div class="menu__desktop">
-            <a class="menu__item profile" th:href="@{/register}">Zarejestruj się</a>
-            <a class="menu__item profile" th:href="@{/login}">Zaloguj się</a>
-        </div>
-    </nav>
+<nav>
+    <button class="burger-btn">
+        <i class="fa-solid fa-burger"></i>
+    </button>
+    <button class="exit-btn">
+        <i class="fa-solid fa-xmark"></i>
+    </button>
+    <div class="menu">
+        <a class="menu__item" th:href="@{/home}">Strona główna</a>
+        <a class="menu__item" th:href="@{/plan/guest}">Wygeneruj plan</a>
+        <a class="menu__item" th:href="@{/recipes}">Wyszukaj przepis</a>
+        <a class="menu__item profile" th:href="@{/register}">Zarejestruj się</a>
+        <a class="menu__item profile menu__login " th:href="@{/login}">Zaloguj się</a>
+    </div>
+    <div class="menu__desktop">
+        <a class="menu__item profile" th:href="@{/register}">Zarejestruj się</a>
+        <a class="menu__item profile" th:href="@{/login}">Zaloguj się</a>
+    </div>
+</nav>
 
     <div class="login-form__wrapper pop-up">
         <div class="login-form__header">
